aks/eshop-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-web
  namespace: github
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - eshopweb.lfraile.net
    secretName: tls-secret
  rules:
  - host: eshopweb.lfraile.net
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: eshop-web          
            port: 
              number: 80
